# RepoMind

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  agent_compatibility.md  agent_rules.md  app.py  pyproject.toml  repomind_judge_format.md  repomind_pipeline_reports.md
.github/: copilot-instructions.md
config/components/: 00_README.md  chunking.json  embedding.json  llm.json  retrieval.json
core/: __init__.py  agent.py  chunker.py  embedder.py  ingestion.py  retriever.py
docs/: 00_README.md  01_system_overview.md  02_backlog.md  03_engineering_decisions.md  04_risk_register.md  05_inference_report_template.md  06_evaluation_summary_template.md  README.md
docs/architecture/: 00_README.md  01_system_overview.md  02_pipeline_stages.md  03_module_boundaries.md  04_data_contracts.md  05_tooling_and_dependencies.md  06_retrieval_and_chunking.md  07_ast_strategy.md  08_model_routing.md  09_ui_architecture.md  10_testing_strategy.md
docs/iterations/: 00_README.md
docs/plans/: 00_README.md  01_implementation_phases.md  02_milestones.md  03_engineering_decisions.md  04_risk_register.md  05_backlog.md  06_testing_rollout.md
docs/product_description/: 00_README.md  01_project_overview.md  01_what_the_product_is.md  02_target_users.md  02_why_it_exists.md  03_how_the_product_works.md  03_product_scope.md  (+7 more)
mcp/: ast_server.py  ast_tools.py
prompts/: generate.txt  plan.txt  understand.txt
tests/: test_ingestion.py  test_prompts.py  test_retriever.py
utils/: component_config.py  diff.py  languages.py  output.py
(+107 files in other folders)
